language/move-lang/tests/move_check/borrows/copy_field_invalid.exp
error: 

    ┌── tests/move_check/borrows/copy_field_invalid.move:12:17 ───
    │
 12 │         let f = &mut s.f;
    │                 -------- It is still being mutably borrowed by this reference
 13 │         copy s;
    │         ^^^^^^ Invalid copy of local 's'
    │

error: 

    ┌── tests/move_check/borrows/copy_field_invalid.move:18:17 ───
    │
 18 │         let f = id_mut(&mut s.f);
    │                 ---------------- It is still being mutably borrowed by this reference
 19 │         copy s;
    │         ^^^^^^ Invalid copy of local 's'
    │

